Fix project overlay bug on safari

--- a/_sass/3-sections/_projects.sass
+++ b/_sass/3-sections/_projects.sass
@@ -57,6 +57,7 @@
 
   &__overlay
     position: absolute
+    left: 0
     width: 100%
     height: 100%
     background: rgba(0, 0, 0, .4)
